[package]
name = "monkey_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "0.2.0"
fxhash = "0.2.1"
lazy_static = "1.4.0"
byteorder = "1.4.3"
clap = { version = "4.1.6", features = ["derive"] }
